Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignTextObject.quorum
class Main
    action Main
        Text t
        Object o
        t:SetValue("text")
        o = cast(Object, t)
        text txt = cast(text, o)
        if txt = "text"
            output "passed"
        end
    end
end
