Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignBooleanTextObj.quorum
class main
    action Main
        Text t
        boolean bool = false
        t:SetValue("text")
        bool = cast(boolean, t)
    end
end